# zeltimer

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml
core/old/: formatter.py  storage.py  timer_utils.py
core/old/commands/: log_timer.py  new_timer.py  resume_timer.py  start_timer.py  status_timer.py  stop_timer.py
data/: active_log.txt  log.md  timers.json
src/zeltimer/: app.py  cli.py
src/zeltimer/core/: alarm.py  timer_manager.py  utils.py
src/zeltimer/data/: log.txt  timers.json
