[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

# ───────────────────────────── package meta ─────────────────────────────
[project]
name = "zeltimer"
version = "0.1.0"
description = "Terminal time tracker with Pomodoro and Markdown logging support."
authors = [{ name = "Zeldean" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }  # switch from text to file
keywords = ["cli", "time tracking", "pomodoro", "markdown", "terminal"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Utilities"
]

# runtime dependencies (expand as needed)
dependencies = [
  "click>=8.1",
]

# ────────────────────────────── CLI entrypoint ──────────────────────────────
[project.scripts]
zeltimer = "zeltimer.app:cli"

# ─────────────────────────── src-layout hint ────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]
