[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeltimer"
version = "1.2.4"
description = "Terminal time tracker"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Zeldean" }
]

keywords = [
  "cli",
  "time tracking",
  "pomodoro",
  "markdown",
  "terminal"
]

dependencies = [
  "click>=8.1"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Utilities",
  "Development Status :: 3 - Alpha"
]

[project.scripts]
zeltimer = "zeltimer.cli:timer"

[tool.setuptools.packages.find]
where = ["src"]
